[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
livesplit-hotkey = "0.7.0"
execute = "0.2.13"
serde = "1.0.193"
toml = "0.8.8"
async_executors = { version = "0.7.0", features = ["threadpool"] }

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
