[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
livesplit-hotkey = "0.7.0"
async_executors = { version = "0.7.0", features = ["threadpool"] }
execute = "0.2.13"
log4rs = "1.2"
serde = "1.0.193"
toml = "0.8.8"
log = "0.4.20"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }
